# daty

./: .buildconfig  .gitignore  .gitlab-ci.yml  README.md  brainstorming  daty  daty.in  daty.py  example-item  importer.py  meson.build  post.py  remote.py  setup.py  snapcraft.yaml  style.css  tags  ui.py  unsaved document 1  unsaved file 1  util.py  widgets.py  wikidata.py  wikidata_physicians.py
_build/: build.ninja
_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-projectinfo.json  meson-info.json
_build/meson-logs/: meson-log.txt
_build/meson-private/: coredata.dat.prev
data/: daty.gresource.xml  gtk  meson.build  ml.prevete.Daty.desktop  ml.prevete.Daty.desktop.in
daty/: .gitignore  __init__.py  application.py  application.py.orig  compile-resources.sh  compile.sh  config.py  constraintlist.py  editor.py  entity.py  entitypopover.py  entityselectable.py  languageadd.py  open.py  overlayedlistboxrow.py  page.py  preferences.py  property.py  qualifier_new_property.py  qualifier_new_value.py  qualifierproperty.py  refactor.py  reference.py  roundedbutton.py  sidebarentity.py  sidebarlist.py  sidebarrow.py  statement.py  tags.79fS5J  tags.fNSxVi  test.py  triplet.py  usersetup.py  util.py  value.py  values.py  widgets.py  wikidata.py
daty/po/: LINGUAS
daty/resources/: daty.gresource  daty.gresource.xml  meson.build  ml.prevete.Daty.desktop  ml.prevete.DatyNightly.desktop  org.prevete.Daty.desktop  update-shebang.py
doc/: Entity.html  Entity.ipynb  entity_structure.md
doc/.ipynb_checkpoints/: Entity-checkpoint.ipynb
doc/source/: conf.py  daty.aboutdaty.rst  daty.application.rst  daty.config.rst  daty.constraintlist.rst  daty.editor.rst  daty.entity.rst  daty.entitypopover.rst  daty.entityselectable.rst  daty.loadingpage.rst  daty.open.rst  daty.overlayedlistboxrow.rst  daty.page.rst  daty.property.rst  daty.qualifierproperty.rst  daty.roundedbutton.rst  daty.rst  daty.sidebarentity.rst  daty.sidebarlist.rst  daty.statements.rst  daty.triplet.rst  daty.usersetup.rst  index.rst  (+4 more)
flatpak/: .gitignore  appstream.xml  ml.prevete.Daty.appdata.xml  ml.prevete.Daty.json  ml.prevete.DatyNightly.appdata.xml  ml.prevete.DatyNightly.json  org.gnome.gtk.json  org.gnome.pygobject.json  org.prevete.Daty.json  plotinus.json  python3-beautifulsoup4.json  python3-bleach.json  python3-gobject.json  python3-pygobject.json  python3-pywikibot.json  python3-requests.json  python3-setproctitle.json  python3-setuptools.json  update-dependencies.py
po/: it.po
win32/: .gitignore  PKGBUILD  README.md  make-daty-installer  make-daty-installer.bat
(+95 files in other folders)
